fix remove only alignment

--- a/public/styles/global.styl
+++ b/public/styles/global.styl
@@ -144,6 +144,7 @@ h1
       display: none
     .removed-header
       grid-area: 2/1/3/2
+      padding-left: var(--box-pad)
     
   .product
     display: block
@@ -211,6 +212,7 @@ h1
         display: none
       .removed-header
         grid-area: 2/1/3/2
+        padding-left: calc(var(--box-pad)/2)
     
 
 .attr
